Migrate to Java 17 & Gradle 8.2 & bump dependencies